--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,18 +16,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  
+  auto_size_text:
   intl: 
   datetime_picker_formfield:  
   flutter_launcher_icons: "^0.6.1"
   
 flutter_icons:
-  android: true 
+  android: true  
   ios: "Example-Icon"
   image_path: "assets/icon/icon.png"
 
