home page header redesign, added qr generation for student, started qr scaning for teachers

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   intl: 
   datetime_picker_formfield:  
   flutter_launcher_icons: "^0.6.1"
+  qr_flutter:
+  barcode_scan:
   
 flutter_icons:
   android: true  
