added calendar view to passes page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_launcher_icons: "^0.6.1"
   qr_flutter:
   barcode_scan:
+  flutter_calendar:
   
 flutter_icons:
   android: true  
