Maybe added scanning, not tested

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   datetime_picker_formfield:  
   flutter_launcher_icons: "^0.6.1"
   qr_flutter:
+  qr_reader:
+  # qr_code_scanner:
   # qr_mobile_vision:
   flutter_calendar:
   
