Base level work to get API in order for get requests\

--- a/chs_weather/Pipfile
+++ b/chs_weather/Pipfile
@@ -7,6 +7,12 @@ verify_ssl = true
 
 [packages]
 django = "*"
+djangorestframework = "*"
+psycopg2-binary = "*"
+dj-database-url = "*"
+django-filters = "*"
+gunicorn = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.7"
